--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -129,6 +129,7 @@
   flex-wrap: wrap;
   flex-direction: row;
   margin: 0 auto;
+  margin-bottom: 10vh;
   background-color: rgb(34, 65, 65);
   width: 80%;
   height: 90%;
